--- a/facialLamdmark.ipynb
+++ b/facialLamdmark.ipynb
@@ -43,6 +43,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "244123c1",
+   "metadata": {},
+   "source": [
+    "Import the cv2 and mediapipe modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "41a76c88-b158-4213-96fb-086778073af6",
@@ -71,6 +79,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55b61471",
+   "metadata": {},
+   "source": [
+    "create objects to draw and visualize the solutions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b28fec03-9a6e-4594-8ad5-5e36801bb73d",
@@ -78,8 +94,15 @@
    "outputs": [],
    "source": [
     "mp_drawing = mp.solutions.drawing_utils\n",
-    "mp_drawing_styles = mp.solutions.drawing_styles\n",
-    "\n"
+    "mp_drawing_styles = mp.solutions.drawing_styles\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a680c1a8",
+   "metadata": {},
+   "source": [
+    "Develope the model and produce results in real-time."
    ]
   },
   {
@@ -135,14 +158,6 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bbc7d9b-be74-441c-ae91-24530d60059a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
